--- a/assets/sass/modules/_bootstrap-custom.sass
+++ b/assets/sass/modules/_bootstrap-custom.sass
@@ -34,7 +34,7 @@ input, button, select, optgroup, textarea
 .container, [class*="container-"]
   padding: 0
   +media-breakpoint-up(xl)
-    max-width: 1600px
+    max-width: 1400px
 .container-fw
   +min(xl)
     width: calc(100% - 120px)
@@ -50,3 +50,7 @@ $cp-xl: 60px
 $cp-lg: 50px
 $cp-sm: 25px
 $cp-xs: 20px
+
+// list unstyling
+.list-unstyled
+  margin: 0
