--- a/assets/sass/modules/_bootstrap-variables.scss
+++ b/assets/sass/modules/_bootstrap-variables.scss
@@ -1,3 +1,5 @@
 // -------------------------------------------
-//  bootstrap variables
+//  override bootstrap variables
 // -------------------------------------------
+
+$body-color: #343a40
