--- a/assets/sass/projects/_basic.sass
+++ b/assets/sass/projects/_basic.sass
@@ -27,6 +27,18 @@ img
    common
   ------------------------------------------ */
 
+// fonts
+.ff-poppins
+  font-family: $poppins
+.ff-barlow
+  font-family: $barlow
+
+// text color
+.tc-mainBlue
+  color: $main-blue
+.tc-lightBlue
+  color: $light-blue
+
 // images
 .pic-block
   img
@@ -70,3 +82,59 @@ img.svg
   opacity: 0
 .replaced-svg
   overflow: visible
+
+// buttons
+.btn-silver
+  position: relative
+  padding: 0
+  &::before, &::after
+    content: ''
+    position: absolute
+    z-index: 0
+    top: 0
+    left: 1px
+    right: 1px
+    display: block
+    +btn-rounded(40px)
+  &::before
+    background-color: rgba(0,0,0,.55)
+    opacity: 0.75
+    +filter(blur(3px))
+    +translateY(6px)
+  &::after
+    +translateY(4px)
+    +h-gradient(#BABABA, #FFFFFF, #BABABA, #FFFFFF, #BABABA)
+  .btn-inner
+    position: relative
+    z-index: 1
+    +flexbox
+    +justify-content-center
+    +align-items-center
+    min-width: 120px
+    +btn-rounded(40px)
+    border: 1px solid #ffffff
+    +v-gradient(#f5f5f5, #E6E6E6 40%, #F5F5F5 42.5%, #F5F5F5 65%, #d3d3d3)
+    font-size: 15px
+    letter-spacing: 0.05em
+    color: $medium-gray
+  +media-hover
+    &::before
+      +transition(opacity .3s ease)
+  +media-hover-only
+    &::before
+      opacity: 1
+  &:active
+    .btn-inner
+      +translateY(2px)
+
+// msg bubble
+.msg-bubble
+  font-size: 15px
+  +msg-bubble
+  &.msg-bubble-sm
+    font-size: 12px
+    padding: 0.35em 0.5em 0.25em
+    border-radius: 0.5em
+    &::before
+      left: 0.75em
+      border-top: 0.35em solid #d83742
