--- a/assets/sass/config/_mixins.sass
+++ b/assets/sass/config/_mixins.sass
@@ -1,8 +1,8 @@
 // mixins
 
 // font family
-=font-family($lang)
-  font-family: $lang, 'Heiti TC', 'Microsoft Jhenghei', 'Helvetica Neue', 'Arial', sans-serif
+=font-family($lang...)
+  font-family: $lang, 'Microsoft Jhenghei', 'Helvetica Neue', 'Arial', sans-serif
 
 // --------------------
 // media query
