--- a/assets/sass/projects/_basic.sass
+++ b/assets/sass/projects/_basic.sass
@@ -3,13 +3,13 @@
   ------------------------------------------ */
   
 html, body
-  +font-family('Noto Sans TC')
+  +font-family('Noto Sans TC', 'Heiti TC')
   -ms-text-size-adjust: 100%
   -webkit-text-size-adjust: 100%
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
   &:lang(zh-Hans)
-    +font-family('Noto Sans SC')
+    +font-family('Noto Sans SC', 'Heiti SC')
   
 a, a:hover, a:active, a:visited
   color: inherit
